--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles.scss" />
   </head>
   <body>
     <div id="root"></div>
