--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="./styles.scss" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="columns"></div>
     <script src="./index.tsx"></script>
     <!-- <script src="./test.ts"></script> -->
   </body>
