--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       href="./src/img/favicon.ico"
       type="image/x-icon"
     />
-    <title>Route Calculator</title>
+    <title>루트 계산기</title>
     <link
       rel="stylesheet"
       type="text/css"
