--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="shortcut icon" href="./src/img/favicon.ico" type="image/x-icon" />
   <title>루트 계산기</title>
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css" />
-  <link rel="stylesheet" href="./styles.scss" />
+  <link rel="stylesheet" href="./styles.css" />
 </head>
 
 <body>
