--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       href="./src/img/favicon.ico"
       type="image/x-icon"
     />
-    <link rel="manifest" href="./public/manifest.json" />
+  <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#B1C51A" />
     <title>루트 계산기</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
