refactor: Apply design prototype v1

--- a/design_prototype_v1.html
+++ b/design_prototype_v1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Elan Route Calculator - Modern Prototype</title>
-  <link rel="stylesheet" href="design_prototype.css">
+  <link rel="stylesheet" href="design_prototype_v1.css">
   <!-- Pretendard Font -->
   <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
   <!-- Icons (Phosphor Icons) -->
