--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
       gtag("config", "UA-134508872-2");
     </script>
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
